--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 3
 
 image:
   repository: 865w8z11/fastapiapp
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
